// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading center 1`] = `
<div
  class="loading-throb sk-text-center"
>
  <div
    class="loading-throb__bounce loading-throb__bounce--first"
  />
  <div
    class="loading-throb__bounce loading-throb__bounce--second"
  />
  <div
    class="loading-throb__bounce loading-throb__bounce--third"
  />
</div>
`;

exports[`Loading left 1`] = `
<div
  class="loading-throb sk-text-left"
>
  <div
    class="loading-throb__bounce loading-throb__bounce--first"
  />
  <div
    class="loading-throb__bounce loading-throb__bounce--second"
  />
  <div
    class="loading-throb__bounce loading-throb__bounce--third"
  />
</div>
`;

exports[`Loading right 1`] = `
<div
  class="loading-throb sk-text-right"
>
  <div
    class="loading-throb__bounce loading-throb__bounce--first"
  />
  <div
    class="loading-throb__bounce loading-throb__bounce--second"
  />
  <div
    class="loading-throb__bounce loading-throb__bounce--third"
  />
</div>
`;
